--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ num2words==0.5.12
 numpy==1.24.4
 sympy==1.12
 parallelbar==2.5
-pytorch==1.13.1
+torch==1.13.1
 torchaudio==0.13.1
 tqdm==4.66.1
 typing_extensions==4.8.0
